; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_exec.c_plpython_trigger_error_callback.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_exec.c_plpython_trigger_error_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [28 x i8] c"while modifying trigger row\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @plpython_trigger_error_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @plpython_trigger_error_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call %struct.TYPE_3__* (...) @PLy_current_execution_context()
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 @errcontext(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %1
  ret void
}

declare dso_local %struct.TYPE_3__* @PLy_current_execution_context(...) #1

declare dso_local i32 @errcontext(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
